--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -38,7 +38,8 @@ function formatDate(date: Date) {
             {post.data.cover && (
               <div class="relative mb-6">
                 <div class="absolute -inset-6 bg-gradient-to-b from-white/[0.03] via-white/[0.06] to-transparent rounded-2xl blur-2xl pointer-events-none"></div>
-                <div class="relative bg-gray-900 border border-gray-700/60 rounded-xl overflow-hidden shadow-[0_20px_60px_-15px_rgba(0,0,0,0.7)]">
+                <div class="relative bg-gray-900 rounded-xl overflow-hidden shadow-[0_20px_60px_-15px_rgba(0,0,0,0.7)] ring-1 ring-white/[0.08] ring-inset">
+                  <div class="absolute inset-0 rounded-xl border border-white/[0.06] pointer-events-none z-10"></div>
                   <img
                     src={post.data.cover}
                     alt=""
