View counter, favicon

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import ViewCount from "../../components/ViewCount.astro";
 import { getCollection, render } from "astro:content";
 
 export async function getStaticPaths() {
@@ -72,6 +73,12 @@ function formatDate(date: Date) {
           <time class="text-small text-gray-500 font-mono">
             {formatDate(post.data.date)}
           </time>
+          <span class="text-small text-gray-600 font-mono">
+            ·
+          </span>
+          <span class="text-small text-gray-500 font-mono">
+            <ViewCount path={`/blog/${post.id}`} />
+          </span>
           {post.data.tags && (
             <div class="flex gap-2 flex-wrap">
               {post.data.tags.map((tag: string) => (
