--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -16,6 +16,7 @@
   --sl-color-gray-5: #2a2a2a;
   --sl-color-gray-6: #1a1a1a;
   --sl-color-black: #0a0a0a;
+  --sl-sidebar-width: 22rem;
 }
 
 /* Hide light/dark theme toggle */
