Cover image alignment

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -60,7 +60,7 @@ function formatDate(date: Date) {
                 <img
                   src={post.data.cover}
                   alt=""
-                  class="w-full block max-h-[260px] object-cover"
+                  class="w-full block max-h-[260px] object-cover object-top"
                 />
               </div>
             )}
