--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -174,6 +174,9 @@ function formatDate(date: Date) {
   .prose img {
     @apply rounded-xl border border-gray-800 my-8;
   }
+  .prose video {
+    @apply rounded-xl border border-gray-800 my-8 w-full;
+  }
   .prose hr {
     @apply border-gray-800 my-10;
   }
